# licence_server

./: README.md  pyproject.toml
app/: admin.py  db.py  license_admin.py  main.py  models.py  service.py  settings.py  web_admin.py
app/static/: admin.css
app/templates/admin/: index.html
deploy/: ccm-license-server.env.example  ccm-license-server.service
tests/: test_admin_cli.py  test_admin_web.py  test_token_endpoint.py
